workloads/testgroup/testapp/infra/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: testapp-route
  namespace: testgroup-testapp
spec:
  parentRefs:
    - name: platform-gateway
      namespace: nginx-gateway-fabric
      sectionName: https-testapp
  hostnames:
    - testapp.atlas
  rules:
    - backendRefs:
        - name: testapp
          port: 8080
