workloads/testgroup/testapp/infra/ccnp-ingress.yaml
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: testgroup-testapp-ingress
spec:
  endpointSelector:
    matchExpressions:
      - key: "k8s:io.kubernetes.pod.namespace"
        operator: In
        values:
          - database
          - redis
          - minio
  ingress:
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": testgroup-testapp
      toPorts:
        - ports:
            - port: "5432"
            - port: "6379"
            - port: "9000"
